--- a/app/src/main/res/layout/activity_my_cart.xml
+++ b/app/src/main/res/layout/activity_my_cart.xml
@@ -36,6 +36,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="CheckOut"
+            android:textColor="@color/white"
             android:padding="10dp"
             android:layout_marginLeft="60dp"
             android:layout_marginRight="60dp"
